update adding new js panzoom plugin

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
 	"offline_enabled": true,
 	"icons": {
         "16": "img/16.png",
+        "48": "img/48.png",
         "128": "img/128.png"
     }, 
     "app": {
